<resources>
    <string name="app_name">Russesamfunnet</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="profile">Brukerprofil</string>
    <string name="knotList">Knuteliste</string>
    <string name="group">Grupper</string>
    <string name="event">Arrangementer</string>
    <string name="settings">Instillinger</string>
    <string name="bug_report">Rapporter en bug</string>
    <string name="logout">Logg ut</string>
    <string name="app_label">Russesamfunnet</string>
    <string name="search_hint">Søk Skole</string>
    <string name="facebook_app_id">291199641408779</string>
    <string name="fb_login_protocol_scheme">fb291199641408779</string>
    <string name="rapporter">Rapporter</string>
    <string name="slettMelding">Slett Melding</string>
    <string name="fjernBruker">Fjern Bruker Fra Gruppe</string>
    <string name="forlatGruppe">Forlat Gruppen</string>
    <string name="leggTilBruker">Legg Til Bruker</string>
    <string name="url">http://158.38.101.146:8080/</string>
    <string-array name="municipalities">
        <item>Velg fylke</item>
        <item>Akershus</item>
        <item>Aust-Agder</item>
        <item>Buskerud</item>
        <item>Finnmark</item>
        <item>Hedmark</item>
        <item>Hordaland</item>
        <item>Møre og Romsdal</item>
        <item>Nordland</item>
        <item>Oppland</item>
        <item>Rogaland</item>
        <item>Sogn og Fjordane</item>
        <item>Telemark</item>
        <item>Troms</item>
        <item>Trøndelag</item>
        <item>Vest-Agder</item>
        <item>Vestfold</item>
        <item>Østfold</item>
    </string-array>
    <string-array name="Akershus">
        <item>Algarheim</item>
        <item>Aulifeltet</item>
        <item>Aursmoen</item>
        <item>Bjertnestunet</item>
        <item>Bjørkelangen</item>
        <item>Blaker</item>
        <item>Borgen</item>
        <item>Brårud</item>
        <item>Drøbak</item>
        <item>Eidsvoll</item>
        <item>Eltonåsen</item>
        <item>Fagerstrand</item>
        <item>Fetsund</item>
        <item>Finnbråtan</item>
        <item>Fjellfoten</item>
        <item>Fjellsrud</item>
        <item>Fjellstad</item>
        <item>Fjellstrand</item>
        <item>Flateby</item>
        <item>Frogner</item>
        <item>Grønlund</item>
        <item>Haga</item>
        <item>Heggedal</item>
        <item>Hemnes</item>
        <item>Hogsetfeltet</item>
        <item>Hølen</item>
        <item>Jessheim</item>
        <item>Kampå</item>
        <item>Kirkebygda</item>
        <item>Kløfta</item>
        <item>Konglungen</item>
        <item>Kråkstad</item>
        <item>Langset</item>
        <item>Leirsund</item>
        <item>Lindeberg</item>
        <item>Lommedalen</item>
        <item>Lundermoen</item>
        <item>Løken</item>
        <item>Løkenfeltet</item>
        <item>Lørenfallet</item>
        <item>Løstad</item>
        <item>Maura</item>
        <item>Minnesund</item>
        <item>Momoen</item>
        <item>Moss</item>
        <item>Neskollen</item>
        <item>Nesoddtangen</item>
        <item>Nordkisa</item>
        <item>Opakermoen</item>
        <item>Oslo</item>
        <item>Prestegårdshagen</item>
        <item>Rotnes</item>
        <item>Råholt</item>
        <item>Sand</item>
        <item>Sandvoll</item>
        <item>Sessvollmoen</item>
        <item>Siggerud</item>
        <item>Ski</item>
        <item>Skogrand</item>
        <item>Skotbu</item>
        <item>Smestad</item>
        <item>Sørumsand</item>
        <item>Teigebyen</item>
        <item>Tomteråsen</item>
        <item>Torget</item>
        <item>Torvik</item>
        <item>Vestby</item>
        <item>Vormsund</item>
        <item>Ytre Enebakk</item>
        <item>Østersund</item>
        <item>Åkrene</item>
        <item>Åneby</item>
        <item>Årnes</item>
        <item>Ås</item>
        <item>Åsgrenda</item>
    </string-array>
    <string-array name="AustAgder">
        <item>Arendal</item>
        <item>Birkeland</item>
        <item>Blakstad</item>
        <item>Byglandsfjord</item>
        <item>Bykle</item>
        <item>Eikeland</item>
        <item>Evje</item>
        <item>Gjerstad</item>
        <item>Grimstad</item>
        <item>Hovden</item>
        <item>Høvåg</item>
        <item>Jortveit</item>
        <item>Kilsund</item>
        <item>Lillesand</item>
        <item>Longum</item>
        <item>Myra</item>
        <item>Nesgrenda</item>
        <item>Risør</item>
        <item>Rykene</item>
        <item>Tvedestrand</item>
        <item>Ubergsmoen</item>
        <item>Valle</item>
        <item>Åmli</item>
    </string-array>
    <string-array name="Buskerud">
        <item>Askgrenda</item>
        <item>Darbu</item>
        <item>Drammen</item>
        <item>Fagerliåsen/Poverudbyen</item>
        <item>Geilo</item>
        <item>Gol</item>
        <item>Gomnes</item>
        <item>Hallingby</item>
        <item>Heggedal</item>
        <item>Helgelandsmoen</item>
        <item>Hemsedal</item>
        <item>Hol</item>
        <item>Holmsbu</item>
        <item>Hvittingfoss</item>
        <item>Hyggen</item>
        <item>Hønefoss</item>
        <item>Klokkarstua</item>
        <item>Kongsberg</item>
        <item>Kroksund</item>
        <item>Krøderen</item>
        <item>Lampeland</item>
        <item>Nakkerud</item>
        <item>Nesbyen</item>
        <item>Norderhov</item>
        <item>Noresund</item>
        <item>Nærnes</item>
        <item>Oddevall/Sjåstad</item>
        <item>Ormåsen</item>
        <item>Oslo</item>
        <item>Prestfoss</item>
        <item>Rødberg</item>
        <item>Røyken</item>
        <item>Skotselv</item>
        <item>Sokna</item>
        <item>Steinsåsen</item>
        <item>Sundvollen</item>
        <item>Svelvik	</item>
        <item>Svene</item>
        <item>Svøo</item>
        <item>Sylling</item>
        <item>Sysle</item>
        <item>Sætre</item>
        <item>Tofte</item>
        <item>Torpo</item>
        <item>Tranby</item>
        <item>Tyristrand</item>
        <item>Vang</item>
        <item>Veggli</item>
        <item>Vestfossen</item>
        <item>Vikersund</item>
        <item>Ål</item>
        <item>Åmot/Geithus</item>
        <item>Åros</item>
    </string-array>
    <string-array name="Finnmark">
        <item>Alta</item>
        <item>Amtmannsnes</item>
        <item>Berlevåg</item>
        <item>Bjørnevatn</item>
        <item>Breivikbotn</item>
        <item>Båtsfjord</item>
        <item>Forsøl</item>
        <item>Hammerfest</item>
        <item>Hasvik</item>
        <item>Havøysund</item>
        <item>Hesseng</item>
        <item>Honningsvåg</item>
        <item>Karasjok</item>
        <item>Kautokeino</item>
        <item>Kiberg</item>
        <item>Kirkenes</item>
        <item>Kjøllefjord</item>
        <item>Kvalsund</item>
        <item>Lakselv</item>
        <item>Mehamn</item>
        <item>Nordvågen</item>
        <item>Rafsbotn</item>
        <item>Rypefjord</item>
        <item>Talvik</item>
        <item>Tana Bru</item>
        <item>Tverrelvdalen</item>
        <item>Vadsø</item>
        <item>Vardø</item>
        <item>Vestre Jakobselv</item>
        <item>Øksfjord</item>
    </string-array>
    <string-array name="Hedmark">
        <item>Alvdal</item>
        <item>Bekkelaget</item>
        <item>Blæstadgrenda</item>
        <item>Braskereidfoss</item>
        <item>Brumunddal</item>
        <item>Disenå</item>
        <item>Elverum</item>
        <item>Flisa</item>
        <item>Folldal</item>
        <item>Gata</item>
        <item>Hamar</item>
        <item>Ilseng</item>
        <item>Ingeberg</item>
        <item>Innbygda</item>
        <item>Kirkenær</item>
        <item>Kjellmyra</item>
        <item>Kongsvinger</item>
        <item>Koppang</item>
        <item>Kylstad</item>
        <item>Løiten</item>
        <item>Løten</item>
        <item>Magnor</item>
        <item>Mesnali</item>
        <item>Mo</item>
        <item>Moelv</item>
        <item>Namnå</item>
        <item>Nybergsund</item>
        <item>Os</item>
        <item>Otnes</item>
        <item>Rena</item>
        <item>Romedal</item>
        <item>Roverud</item>
        <item>Sand</item>
        <item>Sander</item>
        <item>Skarnes</item>
        <item>Skotterud</item>
        <item>Slemsrud</item>
        <item>Stange</item>
        <item>Stavsjø</item>
        <item>Sønsterud</item>
        <item>Sørbygdafeltet</item>
        <item>Tangen</item>
        <item>Tingnes</item>
        <item>Tolga</item>
        <item>Tynset	</item>
        <item>Våler</item>
        <item>Ådalsbruk</item>
    </string-array>
</resources>